Number of small changes to core